feat: update ESLint configuration and add start script; refactor service classes for consistency

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node src/consumer.js",
         "start-dev": "nodemon src/consumer.js",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix"
